force-app/main/default/objects/Flight__c/fields/Checked_In_Count__c.field-meta.xml
<CustomField>
    <fullName>Checked_In_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Checked In Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>