force-app/main/default/objects/Flight__c/fields/Depart__c.field-meta.xml
<CustomField>
    <fullName>Depart__c</fullName>
    <label>Depart</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>