force-app/main/default/objects/Flight__c/fields/From_Location__c.field-meta.xml
<CustomField>
    <fullName>From_Location__c</fullName>
    <label>From (Location)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>