force-app/main/default/objects/Flight__c/fields/Passengers_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Passengers_Capacity__c</fullName>
    <label>Passengers Capacity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>