force-app/main/default/objects/Flight__c/fields/Seat_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Seat_Bookings__c</fullName>
    <label>Seat Bookings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>