force-app/main/default/objects/Flight__c/fields/To_Location__c.field-meta.xml
<CustomField>
    <fullName>To_Location__c</fullName>
    <label>To (Location)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>